// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GrantListEditor should add grant to the list 1`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)>
        <WithStyles(WithTheme(WithWidth(GrantListEditorHeader)))
          disabled={false}
          hideType={false}
          onDeleteAll={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginTop": -8,
        }
      }
      xs={12}
    >
      <WithStyles(List)
        classes={
          Object {
            "root": "undefined ",
          }
        }
      >
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={false}
          canMoveUp={false}
          grant={
            Object {
              "grantAgencyName": "Test",
              "grantAgencyType": "Testing",
              "grantId": "123",
            }
          }
          index={0}
          key="GrantListRow_0"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`GrantListEditor should delete all grants 1`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)>
        <WithStyles(WithTheme(WithWidth(GrantListEditorHeader)))
          disabled={false}
          hideType={false}
          onDeleteAll={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginTop": -8,
        }
      }
      xs={12}
    >
      <WithStyles(List)
        classes={
          Object {
            "root": "undefined ",
          }
        }
      >
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={true}
          canMoveUp={false}
          grant={
            Object {
              "grantAgencyName": "Test 1",
              "grantAgencyType": "Testing 1",
              "grantId": "123",
            }
          }
          index={0}
          key="GrantListRow_0"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={false}
          canMoveUp={true}
          grant={
            Object {
              "grantAgencyName": "Test 2",
              "grantAgencyType": "Testing 2",
              "grantId": "456",
            }
          }
          index={1}
          key="GrantListRow_1"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`GrantListEditor should delete all grants 2`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
</div>
`;

exports[`GrantListEditor should delete grant 1`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)>
        <WithStyles(WithTheme(WithWidth(GrantListEditorHeader)))
          disabled={false}
          hideType={false}
          onDeleteAll={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginTop": -8,
        }
      }
      xs={12}
    >
      <WithStyles(List)
        classes={
          Object {
            "root": "undefined ",
          }
        }
      >
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={true}
          canMoveUp={false}
          grant={
            Object {
              "grantAgencyName": "Test 1",
              "grantAgencyType": "Testing 1",
              "grantId": "123",
            }
          }
          index={0}
          key="GrantListRow_0"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={false}
          canMoveUp={true}
          grant={
            Object {
              "grantAgencyName": "Test 2",
              "grantAgencyType": "Testing 2",
              "grantId": "456",
            }
          }
          index={1}
          key="GrantListRow_1"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`GrantListEditor should delete grant 2`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)>
        <WithStyles(WithTheme(WithWidth(GrantListEditorHeader)))
          disabled={false}
          hideType={false}
          onDeleteAll={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginTop": -8,
        }
      }
      xs={12}
    >
      <WithStyles(List)
        classes={
          Object {
            "root": "undefined ",
          }
        }
      >
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={false}
          canMoveUp={false}
          grant={
            Object {
              "grantAgencyName": "Test 2",
              "grantAgencyType": "Testing 2",
              "grantId": "456",
            }
          }
          index={0}
          key="GrantListRow_0"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`GrantListEditor should have a proper style generator 1`] = `
Object {
  "list": Object {
    "maxHeight": 200,
    "overflow": "hidden",
    "width": "100%",
  },
  "scroll": Object {
    "overflowY": "scroll",
  },
}
`;

exports[`GrantListEditor should move the grant down 1`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)>
        <WithStyles(WithTheme(WithWidth(GrantListEditorHeader)))
          disabled={false}
          hideType={false}
          onDeleteAll={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginTop": -8,
        }
      }
      xs={12}
    >
      <WithStyles(List)
        classes={
          Object {
            "root": "undefined ",
          }
        }
      >
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={true}
          canMoveUp={false}
          grant={
            Object {
              "grantAgencyName": "Test 1",
              "grantAgencyType": "Testing 1",
              "grantId": "123",
            }
          }
          index={0}
          key="GrantListRow_0"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={false}
          canMoveUp={true}
          grant={
            Object {
              "grantAgencyName": "Test 2",
              "grantAgencyType": "Testing 2",
              "grantId": "456",
            }
          }
          index={1}
          key="GrantListRow_1"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`GrantListEditor should move the grant down 2`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)>
        <WithStyles(WithTheme(WithWidth(GrantListEditorHeader)))
          disabled={false}
          hideType={false}
          onDeleteAll={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginTop": -8,
        }
      }
      xs={12}
    >
      <WithStyles(List)
        classes={
          Object {
            "root": "undefined ",
          }
        }
      >
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={true}
          canMoveUp={false}
          grant={
            Object {
              "grantAgencyName": "Test 2",
              "grantAgencyType": "Testing 2",
              "grantId": "456",
            }
          }
          index={0}
          key="GrantListRow_0"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={false}
          canMoveUp={true}
          grant={
            Object {
              "grantAgencyName": "Test 1",
              "grantAgencyType": "Testing 1",
              "grantId": "123",
            }
          }
          index={1}
          key="GrantListRow_1"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`GrantListEditor should move the grant down 3`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)>
        <WithStyles(WithTheme(WithWidth(GrantListEditorHeader)))
          disabled={false}
          hideType={false}
          onDeleteAll={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginTop": -8,
        }
      }
      xs={12}
    >
      <WithStyles(List)
        classes={
          Object {
            "root": "undefined ",
          }
        }
      >
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={true}
          canMoveUp={false}
          grant={
            Object {
              "grantAgencyName": "Test 2",
              "grantAgencyType": "Testing 2",
              "grantId": "456",
            }
          }
          index={0}
          key="GrantListRow_0"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={false}
          canMoveUp={true}
          grant={
            Object {
              "grantAgencyName": "Test 1",
              "grantAgencyType": "Testing 1",
              "grantId": "123",
            }
          }
          index={1}
          key="GrantListRow_1"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`GrantListEditor should move the grant up 1`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)>
        <WithStyles(WithTheme(WithWidth(GrantListEditorHeader)))
          disabled={false}
          hideType={false}
          onDeleteAll={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginTop": -8,
        }
      }
      xs={12}
    >
      <WithStyles(List)
        classes={
          Object {
            "root": "undefined ",
          }
        }
      >
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={true}
          canMoveUp={false}
          grant={
            Object {
              "grantAgencyName": "Test 1",
              "grantAgencyType": "Testing 1",
              "grantId": "123",
            }
          }
          index={0}
          key="GrantListRow_0"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={false}
          canMoveUp={true}
          grant={
            Object {
              "grantAgencyName": "Test 2",
              "grantAgencyType": "Testing 2",
              "grantId": "456",
            }
          }
          index={1}
          key="GrantListRow_1"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`GrantListEditor should move the grant up 2`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)>
        <WithStyles(WithTheme(WithWidth(GrantListEditorHeader)))
          disabled={false}
          hideType={false}
          onDeleteAll={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginTop": -8,
        }
      }
      xs={12}
    >
      <WithStyles(List)
        classes={
          Object {
            "root": "undefined ",
          }
        }
      >
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={true}
          canMoveUp={false}
          grant={
            Object {
              "grantAgencyName": "Test 2",
              "grantAgencyType": "Testing 2",
              "grantId": "456",
            }
          }
          index={0}
          key="GrantListRow_0"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={false}
          canMoveUp={true}
          grant={
            Object {
              "grantAgencyName": "Test 1",
              "grantAgencyType": "Testing 1",
              "grantId": "123",
            }
          }
          index={1}
          key="GrantListRow_1"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`GrantListEditor should move the grant up 3`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)>
        <WithStyles(WithTheme(WithWidth(GrantListEditorHeader)))
          disabled={false}
          hideType={false}
          onDeleteAll={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginTop": -8,
        }
      }
      xs={12}
    >
      <WithStyles(List)
        classes={
          Object {
            "root": "undefined ",
          }
        }
      >
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={true}
          canMoveUp={false}
          grant={
            Object {
              "grantAgencyName": "Test 1",
              "grantAgencyType": "Testing 1",
              "grantId": "123",
            }
          }
          index={0}
          key="GrantListRow_0"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={false}
          canMoveUp={true}
          grant={
            Object {
              "grantAgencyName": "Test 2",
              "grantAgencyType": "Testing 2",
              "grantId": "456",
            }
          }
          index={1}
          key="GrantListRow_1"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`GrantListEditor should not move the grant up at index 0 1`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)>
        <WithStyles(WithTheme(WithWidth(GrantListEditorHeader)))
          disabled={false}
          hideType={false}
          onDeleteAll={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginTop": -8,
        }
      }
      xs={12}
    >
      <WithStyles(List)
        classes={
          Object {
            "root": "undefined ",
          }
        }
      >
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={false}
          canMoveUp={false}
          grant={
            Object {
              "grantAgencyName": "Test 1",
              "grantAgencyType": "Testing 1",
              "grantId": "123",
            }
          }
          index={0}
          key="GrantListRow_0"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`GrantListEditor should not move the grant up at index 0 2`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)>
        <WithStyles(WithTheme(WithWidth(GrantListEditorHeader)))
          disabled={false}
          hideType={false}
          onDeleteAll={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginTop": -8,
        }
      }
      xs={12}
    >
      <WithStyles(List)
        classes={
          Object {
            "root": "undefined ",
          }
        }
      >
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={false}
          canMoveUp={false}
          grant={
            Object {
              "grantAgencyName": "Test 1",
              "grantAgencyType": "Testing 1",
              "grantId": "123",
            }
          }
          index={0}
          key="GrantListRow_0"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`GrantListEditor should not move the grant up the disabled grant 1`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)>
        <WithStyles(WithTheme(WithWidth(GrantListEditorHeader)))
          disabled={false}
          hideType={false}
          onDeleteAll={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginTop": -8,
        }
      }
      xs={12}
    >
      <WithStyles(List)
        classes={
          Object {
            "root": "undefined ",
          }
        }
      >
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={true}
          canMoveUp={false}
          disabled={true}
          grant={
            Object {
              "disabled": true,
              "grantAgencyName": "Test 1",
              "grantAgencyType": "Testing 1",
              "grantId": "123",
            }
          }
          index={0}
          key="GrantListRow_0"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={false}
          canMoveUp={true}
          grant={
            Object {
              "grantAgencyName": "Test 2",
              "grantAgencyType": "Testing 2",
              "grantId": "456",
            }
          }
          index={1}
          key="GrantListRow_1"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`GrantListEditor should not move the grant up the disabled grant 2`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)>
        <WithStyles(WithTheme(WithWidth(GrantListEditorHeader)))
          disabled={false}
          hideType={false}
          onDeleteAll={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginTop": -8,
        }
      }
      xs={12}
    >
      <WithStyles(List)
        classes={
          Object {
            "root": "undefined ",
          }
        }
      >
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={true}
          canMoveUp={false}
          disabled={true}
          grant={
            Object {
              "disabled": true,
              "grantAgencyName": "Test 1",
              "grantAgencyType": "Testing 1",
              "grantId": "123",
            }
          }
          index={0}
          key="GrantListRow_0"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={false}
          canMoveUp={true}
          grant={
            Object {
              "grantAgencyName": "Test 2",
              "grantAgencyType": "Testing 2",
              "grantId": "456",
            }
          }
          index={1}
          key="GrantListRow_1"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`GrantListEditor should render default view 1`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
</div>
`;

exports[`GrantListEditor should render error from props 1`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Typography)
    color="error"
    variant="caption"
  >
    Some error
  </WithStyles(Typography)>
</div>
`;

exports[`GrantListEditor should render error from props as children 1`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Typography)
    color="error"
    variant="caption"
  >
    <span
      key="0/.0"
    >
      Test error 1
    </span>
    <span
      key="1/.1"
    >
      Test error 2
    </span>
  </WithStyles(Typography)>
</div>
`;

exports[`GrantListEditor should render scroll class if grants are more than 3 1`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)>
        <WithStyles(WithTheme(WithWidth(GrantListEditorHeader)))
          disabled={false}
          hideType={false}
          onDeleteAll={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginTop": -8,
        }
      }
      xs={12}
    >
      <WithStyles(List)
        classes={
          Object {
            "root": "undefined scroll-class",
          }
        }
      >
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={true}
          canMoveUp={false}
          grant={
            Object {
              "grantAgencyName": "Test 1",
              "grantAgencyType": "Testing 1",
              "grantId": "123",
            }
          }
          index={0}
          key="GrantListRow_0"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={true}
          canMoveUp={true}
          grant={
            Object {
              "grantAgencyName": "Test 2",
              "grantAgencyType": "Testing 2",
              "grantId": "456",
            }
          }
          index={1}
          key="GrantListRow_1"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={true}
          canMoveUp={true}
          grant={
            Object {
              "grantAgencyName": "Test 3",
              "grantAgencyType": "Testing 3",
              "grantId": "456",
            }
          }
          index={2}
          key="GrantListRow_2"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={false}
          canMoveUp={true}
          grant={
            Object {
              "grantAgencyName": "Test 4",
              "grantAgencyType": "Testing 4",
              "grantId": "456",
            }
          }
          index={3}
          key="GrantListRow_3"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`GrantListEditor should render string error from props 1`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Typography)
    color="error"
    variant="caption"
  >
    Test error
  </WithStyles(Typography)>
</div>
`;

exports[`GrantListEditor should render with default given value 1`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)>
        <WithStyles(WithTheme(WithWidth(GrantListEditorHeader)))
          disabled={false}
          hideType={false}
          onDeleteAll={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginTop": -8,
        }
      }
      xs={12}
    >
      <WithStyles(List)
        classes={
          Object {
            "root": "undefined ",
          }
        }
      >
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={false}
          canMoveUp={false}
          grant={
            Object {
              "grantAgencyName": "Testing",
              "grantAgencyType": "Test",
              "grantId": "1234",
            }
          }
          index={0}
          key="GrantListRow_0"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`GrantListEditor should render with default given value is Immutable List 1`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)>
        <WithStyles(WithTheme(WithWidth(GrantListEditorHeader)))
          disabled={false}
          hideType={false}
          onDeleteAll={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginTop": -8,
        }
      }
      xs={12}
    >
      <WithStyles(List)
        classes={
          Object {
            "root": "undefined ",
          }
        }
      >
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={false}
          canMoveUp={false}
          grant={
            Object {
              "grantAgencyName": "Testing",
              "grantAgencyType": "Test",
              "grantId": "1234",
            }
          }
          index={0}
          key="GrantListRow_0"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`GrantListEditor should update on receiving new props 1`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(List)>
        <WithStyles(WithTheme(WithWidth(GrantListEditorHeader)))
          disabled={false}
          hideType={false}
          onDeleteAll={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginTop": -8,
        }
      }
      xs={12}
    >
      <WithStyles(List)
        classes={
          Object {
            "root": "undefined ",
          }
        }
      >
        <WithStyles(WithTheme(WithWidth(GrantListEditorRow)))
          canMoveDown={false}
          canMoveUp={false}
          grant={
            Object {
              "grantAgencyName": "Testing",
              "grantAgencyType": "Test",
              "grantId": "1234",
            }
          }
          index={0}
          key="GrantListRow_0"
          onDelete={[Function]}
          onMoveDown={[Function]}
          onMoveUp={[Function]}
        />
      </WithStyles(List)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`GrantListEditor should update with error message 1`] = `
<div>
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
</div>
`;

exports[`GrantListEditor should update with error message 2`] = `
<div>
  <WithStyles(Alert)
    message="Test error message from state"
    type="warning"
  />
  <GrantListEditorForm
    disabled={false}
    hideType={false}
    isPopulated={[Function]}
    onAdd={[Function]}
    required={true}
  />
</div>
`;
